2005-02-13  Erik Hjortsberg  <erik@katastrof.nu>

	* Moved to OGRE 1.0 and CEGUI 0.2.
	* Improved terrain LOD calculations. Though it still needs a lot of tweaking.

2005-02-12  Erik Hjortsberg  <erik@katastrof.nu>

	* Don't include invalid mercator segments in terrainpage LOD calculations.
	* Always show the tile that the camera is on in full detail.

2005-02-12  Erik Hjortsberg  <erik@katastrof.nu>

	* Added ability to scale the alpha textures for the splatting terrain. This is done with blur filtering thtough the use of devIL. The result is better looking terrain.
	* Added dependency to devIL. Ogre already uses this, so it should be no big change.
	* Bugfixes for segment and pages.

2005-02-10  Erik Hjortsberg  <erik@katastrof.nu>

	* added libWidgets.a

2005-02-10  Erik Hjortsberg  <erik@katastrof.nu>

	* use the new WidgetDefinitions class
	* fix bug with the console crashing when trying to expose it

2005-02-10  Erik Hjortsberg  <erik@katastrof.nu>

	* added TerrainPage to act as a bridge between ogre terrain pages and mercator segments, allowing for larger terrain pages, which gives better performance (this does not work with the material yet though)
	* with Renderables, change material lod when geometry lod changes

2005-02-10  Erik Hjortsberg  <erik@katastrof.nu>

	* send event on eris polling start and stop

2005-02-10  Erik Hjortsberg  <erik@katastrof.nu>

	* set the aspect ratio
	* code cleanup and comments added

2005-02-10  Erik Hjortsberg  <erik@katastrof.nu>

	* added various new models

2005-02-10  Erik Hjortsberg  <erik@katastrof.nu>

	* moved widgets to a separate object archive
	* added double click actions to server browser and server widget
	* mask password
	* began work on create avatar widget
	* added Performance, a widget to show fps and other related info
	This widget uses the new scheme where the definition is in a file suffixed with .widget

2005-02-04  Erik Hjortsberg  <erik@katastrof.nu>
